--- a/Installation/docker-compose.yaml
+++ b/Installation/docker-compose.yaml
@@ -31,8 +31,6 @@ services:
       dockerfile: Dockerfile
     container_name: jenkins-blueocean
     restart: unless-stopped
-    networks:
-      - jenkins
     ports:
       - "8080:8080"   # Jenkins UI
       - "50000:50000" # Agent port
@@ -44,11 +42,48 @@ services:
     volumes:
       - jenkins-data:/var/jenkins_home
       - jenkins-docker-certs:/certs/client:ro
+    networks:
+      - jenkins
+  
+  # Service 3: SonarQube
+  sonarqube:
+    image: sonarqube:latest
+    container_name: sonarqube
+    restart: unless-stopped
+    depends_on:
+      - db
+    ports:
+      - "9000:9000"
+    environment:
+      - SONAR_JDBC_URL=jdbc:postgresql://db:5432/sonar
+      - SONAR_JDBC_USERNAME=sonar
+      - SONAR_JDBC_PASSWORD=sonar
+    volumes:
+      - sonarqube-data:/opt/sonarqube/data
+      - sonarqube-extensions:/opt/sonarqube/extensions
+      - sonarqube-logs:/opt/sonarqube/logs
+    networks:
+      - jenkins
+  
+  # Service 4: SonarQube Database
+  db:
+    image: postgres:15
+    container_name: sonarqube-db
+    restart: unless-stopped
+    environment:
+      - POSTGRES_USER=sonar
+      - POSTGRES_PASSWORD=sonar
+      - POSTGRES_DB=sonar
+    volumes:
+      - postgresql-data:/var/lib/postgresql/data
+    networks:
+      - jenkins
 
 # Create a bridge network for internal communication
 networks:
   jenkins:
     name: jenkins
+    driver: bridge
 
 # Persist data so you don't lose configuration on restart
 volumes:
@@ -56,3 +91,11 @@ volumes:
     name: jenkins-data
   jenkins-docker-certs:
     name: jenkins-docker-certs
+  sonarqube-data:
+    name: sonarqube-data
+  sonarqube-extensions:
+    name: sonarqube-extensions
+  sonarqube-logs:
+    name: sonarqube-logs
+  postgresql-data:
+    name: postgresql-data
